feat: setup components

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .App-logo {
